# ffidl

./: GNUmakefile.in  README.txt  aclocal.m4  configure  configure.ac  configure.in  ffidlConfig.h.in  index.html  license.terms  pkgIndex.tcl.in  styles.css
demos/: atol.tcl
doc/: ffidl.html  styles.css
generic/: ffidl.c  ffidl_test.c
tclconfig/: ChangeLog  install-sh  tcl.m4
tests/: basic.test  callbacks.test  interp.test  libm.test  qsort.test
win/: ffidlConfig.h  makefile.vc
